--- a/public/css/worker.css
+++ b/public/css/worker.css
@@ -5,6 +5,14 @@ body {
   color: #000;
 }
 
+.navbar-nav.mr-auto li a{
+  float:left;
+  padding:0 10px;
+  text-align: center;
+  list-style-type: none;
+}
+
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
