--- a/resources/sass/worker.scss
+++ b/resources/sass/worker.scss
@@ -38,3 +38,9 @@ body {
 .login-body {
   background-color: rgba(0, 0, 0, 0.25);
 }
+.v-enter-active,.v-leave-active{
+  transition: opacity 3s;
+}
+.v-enter,.v-leave-to{
+  opacity 0;
+}
