--- a/public/css/worker.css
+++ b/public/css/worker.css
@@ -11,11 +11,27 @@ body {
 }
 
 .navbar-brand {
-  color: #ffcccc !important;
+  color: #fa8072 !important;
 }
 
 .nav-link {
   color: #000 !important;
+}
+
+.nav-link.daily{
+  color:red !important;
+  font-weight: bold;
+}
+.nav-link.dailylist{
+  color:red !important;
+}
+.nav-link.routine{
+  color:blue !important;
+  font-weight: bold;
+}
+.nav-link.worker{
+  color:#ff8c00 !important;
+  font-weight: bold;
 }
 
 .table-dark {
@@ -37,5 +53,15 @@ body {
 
 .login-body {
   background-color: rgba(0, 0, 0, 0.25);
+}
+
+.nav-item {
+  color: red;
+  border-color: #dee2e6 #dee2e6 #f8fafc;
+}
+
+.nav-link:hover {
+  border:solid 0.5px;
+  border-radius: 5px;
 }
 
